# OGscraper

./: README.md  app.py  build.sh  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_results_20250917_121743.json  test_results_20250917_134646.json  test_suite.py
docs/: demo.js  index.html  style.css
ogscraper/: __init__.py  async_extractors.py  cli.py  discovery.py  extraction.py  extractors.py  models.py  processing.py  renderer.py  scraper.py
static/css/: style.css
static/js/: app.js
templates/: index.html
