[project]
name = "ogscraper"
version = "0.1.0"
description = "Universal web scraper for technical content extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "trafilatura>=1.6.0",
    "feedparser>=6.0.0",
    "click>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    "playwright>=1.40.0",
    "readability-lxml>=0.8.1",
    "aiohttp>=3.9.0"
]

[project.scripts]
ogscraper = "ogscraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
